use bootstrap in h1

--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ $yellow: #efd592;
   padding: 20px;
 }
 
-h1 {
+.h1 {
   position: relative;
   left: 30%;
   top: 30px;
@@ -92,7 +92,7 @@ p {
     overflow-y: auto;
   }
   
-  h1 {
+  .h1 {
     left: 10%;
     top: 60px;
     font-size: 1.5em;
