--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
   padding: 20px;
 }
 
-h1 {
+.h1 {
   position: relative;
   left: 30%;
   top: 30px;
@@ -100,7 +100,7 @@ p {
   #root {
     overflow-y: auto;
   }
-  h1 {
+  .h1 {
     left: 10%;
     top: 60px;
     font-size: 1.5em;
